--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,14 @@
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
+body, .navbar {
+  // gradient provided by @ @_ighosh at uiGradients.com
+  background: #a8c0ff;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(left, #3f2b96, #a8c0ff);
+  background: -moz-linear-gradient(left, #3f2b96, #a8c0ff);
+  background: -o-linear-gradient(left, #3f2b96, #a8c0ff);
+  background: linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.navbar {
+  border: none;
+}
