--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,7 @@
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
-body, .navbar {
+.navbar, .home-callout {
   // gradient provided by @ @_ighosh at uiGradients.com
   background: #a8c0ff;  /* fallback for old browsers */
   background: -webkit-linear-gradient(left, #3f2b96, #a8c0ff);
@@ -30,4 +30,11 @@ body, .navbar {
 }
 .navbar {
   border: none;
+}
+
+.home-callout {
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  color: white;
 }
