--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,9 +17,11 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+/*Topography Styles */
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
 }
+/*Background Gradient */
 .navbar, .home-callout {
   /*vgradient provided by @ @_ighosh at uiGradients.com */
   background: #a8c0ff;  /* fallback for old browsers */
@@ -28,29 +30,22 @@ h1, h2, h3 {
   background: -o-linear-gradient(left, #3f2b96, #a8c0ff);
   background: linear-gradient(to right, #3f2b96, #a8c0ff);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+/*Nav Styles */
 .navbar {
   border: none;
 }
-
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  &:hover {
+    color: white;
+    opacity: 0.75; 
+  }
+}
+/*Home Page Styles*/
 .home-callout {
   margin-top: -20px;
   padding-top: 50px;
   padding-bottom: 100px;
   color: white;
-}
-.navbar-default .navbar-brand {
-  color: white;
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: white;
-}
-
-.navbar-default .navbar-brand:hover {
-  color: white;
-  opacity: 0.75;
-}
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
-  opacity: 0.75;
 }
