--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>This is about us.</h1>
+<div class="container text-center">
+    <h1>This is about us.</h1>
+    <p>We are DevMatch. Our company focuses on creating an exclusive community
+    for developers and entreprenures to meet.</p>
+</div>
