--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <ul class="nav navbar-nav navbar-right">
             <!--<li><a href="/about">About</a></li> *This is the not the rails way to link*-->
             <li><%= link_to "About", about_path %></li>
+            <li><%= link_to "Contact Us", new_contact_path%></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
